fase-2/targeting-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: toggle
spec:
  selector:
    app: targeting
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
  type: ClusterIP
